# gugugaga

./: .env  Dockerfile  README.md  app.sh  docker-compose.yml  start.sh
.github/workflows/: docker-image.yml
gugugaga/: Cargo.toml
gugugaga/src/: main.rs
